--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="images/myPhoto.jpg" alt="Unable to load" height="250" width="250">
+                            <img src="begula.jpg" alt="Unable to load" height="250" width="250">
                         </td>
                         <td>
                             <h1>Anuj Lingwal</h1>
