--- a/Forms.html
+++ b/Forms.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Enter your details here</h1>
-        <form action="images/begula.jpg">
+        <form action="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.mightyforms.com%2Fblog%2Fsuccess-thank-you-message-examples&psig=AOvVaw217oESqD3mHixOq8vKTujt&ust=1678032600341000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCLjWyNbUwv0CFQAAAAAdAAAAABAZ">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" placeholder="Enter first Name">
             <label for="lastName">Last Name</label>
